--- a/index.html
+++ b/index.html
@@ -151,24 +151,24 @@
 
       <h1>更多图片</h1>
       <div class="more-img">
-        <a href="./assets/images/1.png" data-fancybox="group" data-download-src="./assets/images/1.png"><img src="./assets/images/1.png" /></a>
-        <a href="./assets/images/2.png" data-fancybox="group"><img src="./assets/images/2.png" /></a>
-        <a href="./assets/images/3.png" data-fancybox="group"><img src="./assets/images/3.png" /></a>
-        <a href="./assets/images/4.png" data-fancybox="group"><img src="./assets/images/4.png" /></a>
-        <a href="./assets/images/5.png" data-fancybox="group"><img src="./assets/images/5.png" /></a>
-        <a href="./assets/images/6.png" data-fancybox="group"><img src="./assets/images/6.png" /></a>
-        <a href="./assets/images/7.png" data-fancybox="group"><img src="./assets/images/7.png" /></a>
-        <a href="./assets/images/8.png" data-fancybox="group"><img src="./assets/images/8.png" /></a>
-        <a href="./assets/images/9.png" data-fancybox="group"><img src="./assets/images/9.png" /></a>
-        <a href="./assets/images/10.png" data-fancybox="group"><img src="./assets/images/10.png" /></a>
-        <a href="./assets/images/11.png" data-fancybox="group"><img src="./assets/images/11.png" /></a>
-        <a href="./assets/images/12.png" data-fancybox="group"><img src="./assets/images/12.png" /></a>
-        <a href="./assets/images/13.png" data-fancybox="group"><img src="./assets/images/13.png" /></a>
-        <a href="./assets/images/14.png" data-fancybox="group"><img src="./assets/images/14.png" /></a>
-        <a href="./assets/images/15.png" data-fancybox="group"><img src="./assets/images/15.png" /></a>
-        <a href="./assets/images/16.png" data-fancybox="group"><img src="./assets/images/16.png" /></a>
-        <a href="./assets/images/17.png" data-fancybox="group"><img src="./assets/images/17.png" /></a>
-        <a href="./assets/images/18.png" data-fancybox="group"><img src="./assets/images/18.png" /></a>
+        <a href="./assets/images/1.png" data-fancybox="gallery" data-download-src="./assets/images/1.png"><img src="./assets/images/1.png" /></a>
+        <a href="./assets/images/2.png" data-fancybox="gallery"><img src="./assets/images/2.png" /></a>
+        <a href="./assets/images/3.png" data-fancybox="gallery"><img src="./assets/images/3.png" /></a>
+        <a href="./assets/images/4.png" data-fancybox="gallery"><img src="./assets/images/4.png" /></a>
+        <a href="./assets/images/5.png" data-fancybox="gallery"><img src="./assets/images/5.png" /></a>
+        <a href="./assets/images/6.png" data-fancybox="gallery"><img src="./assets/images/6.png" /></a>
+        <a href="./assets/images/7.png" data-fancybox="gallery"><img src="./assets/images/7.png" /></a>
+        <a href="./assets/images/8.png" data-fancybox="gallery"><img src="./assets/images/8.png" /></a>
+        <a href="./assets/images/9.png" data-fancybox="gallery"><img src="./assets/images/9.png" /></a>
+        <a href="./assets/images/10.png" data-fancybox="gallery"><img src="./assets/images/10.png" /></a>
+        <a href="./assets/images/11.png" data-fancybox="gallery"><img src="./assets/images/11.png" /></a>
+        <a href="./assets/images/12.png" data-fancybox="gallery"><img src="./assets/images/12.png" /></a>
+        <a href="./assets/images/13.png" data-fancybox="gallery"><img src="./assets/images/13.png" /></a>
+        <a href="./assets/images/14.png" data-fancybox="gallery"><img src="./assets/images/14.png" /></a>
+        <a href="./assets/images/15.png" data-fancybox="gallery"><img src="./assets/images/15.png" /></a>
+        <a href="./assets/images/16.png" data-fancybox="gallery"><img src="./assets/images/16.png" /></a>
+        <a href="./assets/images/17.png" data-fancybox="gallery"><img src="./assets/images/17.png" /></a>
+        <a href="./assets/images/18.png" data-fancybox="gallery"><img src="./assets/images/18.png" /></a>
       </div>
       <!--<iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
       <!--<section id="more">
@@ -292,7 +292,7 @@
 
   <!-- Fancybox预览样式 -->
   <script>
-    Fancybox.bind('[data-fancybox="group"]', {
+    Fancybox.bind('[data-fancybox="gallery"]', {
       Toolbar: {
         display: {
           left: ["infobar"],
