vercel deploy油饼食不食

--- a/About/index.html
+++ b/About/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>示例页面</title>
-  <link type="text/css" rel="stylesheet" href="./assets/main.css" />
-  <link type="text/css" rel="stylesheet" href="./assets/scrollbar.css" />
+  <link type="text/css" rel="stylesheet" href="/assets/main.css" />
+  <link type="text/css" rel="stylesheet" href="/assets/scrollbar.css" />
 </head>
 
 <body>
   <header>
     <a href="/">
-      <img alt="logo" class="logo" src="./assets/images/table.png">
+      <img alt="logo" class="logo" src="/assets/images/table.png">
     </a>
     <span class="site-title">ZDSchool</span>
   </header>
