--- a/About/index.html
+++ b/About/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>示例页面</title>
-  <link type="text/css" rel="stylesheet" href="/About/assets/main.css" />
-  <link type="text/css" rel="stylesheet" href="/About/assets/scrollbar.css" />
+  <link type="text/css" rel="stylesheet" href="/About/assets/css/main.css" />
+  <link type="text/css" rel="stylesheet" href="/About/assets/css/scrollbar.css" />
 </head>
 
 <body>
