--- a/About/index.html
+++ b/About/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>示例页面</title>
-  <link type="text/css" rel="stylesheet" href="/About/assets/css/main.css" />
-  <link type="text/css" rel="stylesheet" href="/About/assets/css/scrollbar.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.kjchmc.cn/zdschool/About/assets/css/main.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.kjchmc.cn/zdschool/About/assets/css/scrollbar.css" />
 </head>
 
 <body>
   <header>
     <a href="/">
-      <img alt="logo" class="logo" src="/About/assets/images/table.png">
+      <img alt="logo" class="logo" src="https://cdn.kjchmc.cn/zdschool/About/assets/images/table.png">
     </a>
     <span class="site-title">ZDSchool</span>
   </header>
