--- a/About/index.html
+++ b/About/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>示例页面</title>
+  <title>关于本项目</title>
   <link type="text/css" rel="stylesheet" href="https://cdn.kjchmc.cn/zdschool/About/assets/css/main.css" />
   <link type="text/css" rel="stylesheet" href="https://cdn.kjchmc.cn/zdschool/About/assets/css/scrollbar.css" />
 </head>
@@ -20,7 +20,7 @@
     <div style="height: 20px;">
       <div style="float: left;clear: none;width: 100%;">
         <div class="BlankSpace">
-          <h1 style="text-transform: uppercase;">111111</h1>
+          <h1 style="text-transform: uppercase;">你好！</h1>
         </div>
       </div>
     </div>
@@ -29,47 +29,17 @@
       <section bp="grid vertical-center">
         <div class="card">
           <div class="card-font">
-            <h2 id="redeem-content-0">兑换 Minecraft：Java 版和 Bedrock 版（适用于 PC 平台）。</h2>
-            <div class="redeeem-desc" data-bi-id="c1c2c1c1c1c1c3c1c1c1m1r1a3" data-bi-name="c1c2c1c1c1c1c3c1c1c1m1r1a3">
-              <p>创造、探索、生存、反复。<span>适用于 Windows 的 <b>Java 版和 Bedrock 版</b>综合包现已推出。</span><br>
-              </p>
-              <p>使用 <b>Minecraft：Java 版和 Bedrock 版</b>卡片反面的代码或商店收据上印刷的代码。</p>
-              <p>您需要使用已激活的 Microsoft 帐户来兑换代码。&nbsp;<b><a href="https://help.minecraft.net/hc/en-us/articles/5846082805645"
-                    title="深入了解" data-bi-id="n1c1c2c1c1c1c1c3c1c1c1m1r1a3">深入了解</a></b>关于如何通过 <b>Minecraft：Java 版和 Bedrock
-                  版</b>指南兑换 Minecraft 预付卡。</p>
+            <h2 id="redeem-content-0">正在建设中......</h2>
+            <div class="redeeem-desc">
+              <p>....</p>
             </div>
-  
-  
-            <form class="mstoken-0">
-              <label class="txt-entercode txt-black" id="label-0" for="mstoken-0"
-                aria-labelledby="label-0 validationMsg-0">ENTER CODE</label>
-              <input type="text" name="mstoken" id="mstoken-0" value="" class="redinput" autocomplete="off" autofill="off"
-                aria-describedby="redeem-content-0" required="">
-  
-  
-              <button type="submit" data-form-id="mstoken-0"
-                class="btn minecraft-main-button button-green redeem-btn-submit"
-                data-bi-id="n2c2c1c1c1c1c3c1c1c1m1r1a3">提交</button>
-  
-              <span class="txt-req" id="validationMsg-0">* This field is Required</span>
-  
-            </form>
-  
           </div>
         </div>
   
       </section>
     </section>
 
-    <div class="mc-globalbanner __web-inspector-hide-shortcut__">
-      <div class="mc-globalbanner__promo-text">
-        <p>这里是一个广告文本。</p>
-      </div>
-      <a href="#" class="mc-globalbanner__promo-link">这是一个链接</a>
-      <a href="#" class="mc-globalbanner__promo-link-dungeons">这是另一个链接</a>
-    </div>
-
-    <h1>欢迎来到我的网页！</h1>
+    <h1>正在建设中</h1>
     <p>这里是一些内容……</p>
 </body>
 
