feat: add 20-years video - index.html
忠德20周年校庆合唱MV - 我们走在大路上

--- a/index.html
+++ b/index.html
@@ -148,6 +148,24 @@
         </div>
       </section>
 
+      <!-- 2024.11.27 新增 忠德20周年校庆合唱MV - 我们走在大路上 视频内容 -->
+      <section bp="grid vertical-center">
+        <div bp="3@md offset-7@md">
+          <div class="iframe-body">
+            <iframe src="./video3.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+          </div>
+        </div>
+        <div class="container container-style" bp="first@md 12 5@md offset-2@md">
+          <h1>《我们走在大路上》</h1>
+          <h1>2023忠德20周年校庆合唱MV</h1>
+          <p>用歌声祝福母校20周年快乐</p>
+          <p style="text-decoration: underline;text-decoration-style: wavy;text-decoration-color: #779fe2bd;">视频内音频为现场原声</p>
+          <p>合唱 八年级3班(2023) - 应为2024届学生</p>
+          <p>视频制作来自 况佳城</p>
+          <a class="small">(点击图片</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
+        </div>
+      </section>
+
       <h1>更多图片</h1>
       <div class="more-img">
         <a href="./assets/images/1.png" data-fancybox="gallery"><img src="./assets/images/1.png" /></a>
