--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
           <a class="small">(点击图片</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
         </div>
       </section>
-
+      
       <!-- 2024.11.27 新增 忠德20周年校庆合唱MV - 我们走在大路上 视频内容 -->
       <section bp="grid vertical-center">
-        <div bp="3@md offset-7@md">
+        <div bp="10 offset-2 5@md offset-2@md">
           <div class="iframe-body">
             <iframe src="./video3.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
           </div>
         </div>
-        <div class="container container-style" bp="first@md 12 5@md offset-2@md">
+        <div class="container right container-style" bp="4@md offset-8@md 12 offset-1">
           <h1>《我们走在大路上》</h1>
           <h1>2023忠德20周年校庆合唱MV</h1>
           <p>用歌声祝福母校20周年快乐</p>
